--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,251 +4,246 @@ and Do Thi Thu <3
 */
 
 body {
-    font-family: sans-serif;
-    font-size: 100%;
+  font-family: sans-serif;
+  font-size: 100%;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* NAVIGATION BAR */
 .navbar {
-    margin: 0 10%;
-    padding: 1em;
+  margin: 0 10%;
+  padding: 1em;
 }
 
 .navbar .container .navbar-brand img {
-    width: 150px;
+  width: 150px;
 }
 
 .navbar .container .navbar-brand {
-    float: left;
+  float: left;
 }
 
 .navbar .container .navbar-collapse {
-    float: right;
+  float: right;
 }
 
 .navbar .container .navbar-collapse .navbar-search {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 ul.navbar-nav {
-    list-style-type: none;
-    font-weight: bold;
+  list-style-type: none;
+  font-weight: bold;
 }
 ul.navbar-nav li {
-    float: left;
+  float: left;
 }
 ul.navbar-nav li a {
-    color: #fff;
-    display: block;    /* needed to use margin or padding for each link <a> */
-    padding: 10px 20px;
-    text-decoration: none;
-    text-transform: uppercase;
+  color: #fff;
+  display: block; /* needed to use margin or padding for each link <a> */
+  padding: 10px 20px;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 ul.navbar-nav li a:hover {
-    color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.8);
 }
 /* END NAVIGATION BAR */
 
-
 /* HEADER */
-header.masthead { 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+header.masthead {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
 header.masthead.home {
-    background-image: url('../images/bg-header-home.jpg');
+  background-image: url('https://duongnd2016.gitlab.io/img/bg-index.jpg');
 }
 
 header.masthead.about {
-    background-image: url('../images/bg-header-about.jpg');
+  background-image: url('https://duongnd2016.gitlab.io/img/bg-about.jpg');
 }
 
 header.masthead.posts {
-    background-image: url('../images/bg-header-post.jpg');
+  background-image: url('https://duongnd2016.gitlab.io/img/bg-post.jpg');
 }
-
 
 /* add dark filter to header background image */
 header.masthead .overlay {
-    background-color: #212529;
-    position: absolute; /* get the relative position as parent */
-    opacity: 0.5;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  background-color: #212529;
+  position: absolute; /* get the relative position as parent */
+  opacity: 0.5;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .clearfix {
-    clear: both;
+  clear: both;
 }
 
 .page-heading {
-    color: #fff;
-    font-size: 2rem;
-    font-weight: 100;
-    line-height: 1.1;
-    text-align: center;
-    padding: 5.5em 0;
+  color: #fff;
+  font-size: 2rem;
+  font-weight: 100;
+  line-height: 1.1;
+  text-align: center;
+  padding: 5.5em 0;
 }
 
 .heading {
-    font-size: 80px;
-    font-weight: normal;
+  font-size: 80px;
+  font-weight: normal;
 }
 .sub-heading {
-    font-size: 1.5rem;
-    font-weight: lighter;
+  font-size: 1.5rem;
+  font-weight: lighter;
 }
 
 .masthead .container {
-    position: relative;
+  position: relative;
 }
 /* END HEADER */
 
-
 /* SEARCH BAR */
 .search-bar {
-    background-color: white;
-    border: 1px solid gray;
-    margin: 0 20px;
+  background-color: white;
+  border: 1px solid gray;
+  margin: 0 20px;
 }
 
-.search-bar Input {
-    border: 2px solid gray;
-    border-radius: 15px;
-    margin: 4px 12px;
-    padding: 3px;
-    width: 70%;
+.search-bar input {
+  border: 2px solid gray;
+  border-radius: 15px;
+  margin: 4px 12px;
+  padding: 3px;
+  width: 70%;
 }
 
 .search-bar button {
-    border: 2px solid gray;
-    border-radius: 100%;
-    background-color: gray;
-    color: white;
-    padding: 3px;
+  border: 2px solid gray;
+  border-radius: 100%;
+  background-color: gray;
+  color: white;
+  padding: 3px;
 }
 
 .search-text {
-    color: gray;
+  color: gray;
 }
 /* END SEARCH BAR */
 
 /* ARTICLES */
 article a:visited {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 article a:hover {
-    color: #0085A1; 
+  color: #0085a1;
 }
 
 .article-post {
-    width: 60%;
-    margin: auto;
-    padding: 60px 0;
+  width: 60%;
+  margin: auto;
+  padding: 60px 0;
 }
 
 .article-title {
-    font-size: 35px;
-    font-weight: normal;
-    margin: 20px 0 10px 0;
+  font-size: 35px;
+  font-weight: normal;
+  margin: 20px 0 10px 0;
 }
 
 .article-info {
-    font-size: 25px;
-    margin-bottom: 10px;
-    font-weight: normal;
+  font-size: 25px;
+  margin-bottom: 10px;
+  font-weight: normal;
 }
 
 .article-metadata {
-    color:gray;
-    margin-bottom: 20px;
+  color: gray;
+  margin-bottom: 20px;
 }
 
 .article-content {
-    width: 80%;
-    margin: auto;
+  width: 80%;
+  margin: auto;
 }
 
 .article-content h1 {
-    text-align: center;
-    padding: 30px;
+  text-align: center;
+  padding: 30px;
 }
 
 .btn-post {
-    border: none;
-    background-color: #0085A1;
-    color: white;
-    font-size: 1em;
-    font-weight: bold;
-    margin-right: 20%;
-    padding: 20px;
-    text-transform: uppercase;
-    position: absolute;
-    right: 0;
-
+  border: none;
+  background-color: #0085a1;
+  color: white;
+  font-size: 1em;
+  font-weight: bold;
+  margin-right: 20%;
+  padding: 20px;
+  text-transform: uppercase;
+  position: absolute;
+  right: 0;
 }
 
 .btn-post:hover {
-    color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.8);
 }
 /* END ARTICLE */
 
 /* FOOTER */
 footer {
-    text-align: center;
+  text-align: center;
 }
 
 footer a:hover {
-    color: #0085A1;
+  color: #0085a1;
 }
 
 footer a .fab.fa-facebook {
-    background: black;
-    border-radius: 100%;
-    color: white;
-    padding: 15px;
-    margin: 10px;
+  background: black;
+  border-radius: 100%;
+  color: white;
+  padding: 15px;
+  margin: 10px;
 }
 
 footer a .fab.fa-instagram {
-    background: black;
-    border-radius: 100%;
-    color: white;
-    padding: 15px;
-    margin: 10px;
+  background: black;
+  border-radius: 100%;
+  color: white;
+  padding: 15px;
+  margin: 10px;
 }
 
 footer a .fab.fa-github {
-    background: black;
-    border-radius: 100%;
-    color: white;
-    padding: 15px;
-    margin: 10px;
+  background: black;
+  border-radius: 100%;
+  color: white;
+  padding: 15px;
+  margin: 10px;
 }
 
 footer p {
-    color: gray;
-    padding: 10px;
+  color: gray;
+  padding: 10px;
 }
 /* END FOOTER */
 
 /* ABOUT PAGE*/
 .about-me {
-    font-size: 1.5em;
-    line-height: 1.5;
-    margin: auto;
-    padding: 30px;
-    width: 60%;
+  font-size: 1.5em;
+  line-height: 1.5;
+  margin: auto;
+  padding: 30px;
+  width: 60%;
 }
-
